--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,3 @@
-# An example config.ini file
 # key=value pairs to configure the intercom sensor
 # Lines can be up to 128 characters long
 # Entries starting with a # have sensible defaults.
@@ -8,11 +7,11 @@ hostname=intercom
 
 # Known WiFi networks ssid:password
 # If the SSID or the password contains a colon? Tough!
-wifi=network1:password1
-wifi=network2:password2
+wifi=ssid:password
+wifi=ssid:password
 
 # MQTT settings - the default port is 1883
-mqtt_broker=broker.local
+mqtt_broker=brokerhostname.local
 #mqtt_port=1883
 mqtt_username=username
 mqtt_password=password
@@ -28,20 +27,29 @@ detect_interval_ms=50
 # The sample frequency in Hz used to read values from the microphone, don't go higher than 15000
 #sample_frequency_hz=14000
 
+# The loudness threshold (as a fraction of the baseline) above which samples are considered for FFT
+loudness_threshold=0.5
+
 # Values for intercom detection - for pre-selection of events
-minimum_duration_ms=2000
-minimum_loudness=1000
+# If the signal detected is not at least this long, it's not the intercom
+minimum_ring_duration_ms=2000
+# If the loudness (as fraction of the baseline) is not at least this, it's not the intercom
+minimum_ring_loudness=0.6
+# If the average detected frequency is not at least this, it's not the intercom
 minimum_frequency_hz=2000
 
-# Frequency ranges typical for the intercom can be defined
-range=610:620
-range=3280:3300
-range=3350:3370
-range=4380:4395
-range=4550:4560
-range=5420:5430
-range=6580:6590
-range=6640:6660
+# Once we have passed the above tests, we do FFT and look at frequency ranges in the signal.
+# Frequency ranges typical for the intercom can be defined here:
+range=535:546
+range=601:616
+range=666:674
+range=1093:1101
+range=3286:3296
+range=3353:3364
+range=4384:4393
+range=4549:4558
+range=6580:6588
+range=6649:6657
 
-# How many percent of readings need to be inside those ranges
-percent_in_ranges=25
+# How many percent of readings need to be inside those ranges to trigger an intercom event:
+percent_in_ranges=35
