--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
+lib_ldf_mode = deep+
 lib_deps = 
-	olikraus/U8g2@^2.34.17
 	knolleary/PubSubClient@^2.8
 	kosme/arduinoFFT@^1.6
+	olikraus/U8g2@^2.35.15
+	bodmer/TFT_eSPI@^2.5.43
